language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_record_variant_2.snap
---
source: language-server/src/tests/action.rs
expression: "pub type Auth {\n  Verified(Int)\n  Unverified\n}\n\nconst auth = True\n\nconst id = 1234\n\npub fn main() {\n  let v = verify(auth, Verified(id))\n\n  v\n}"
---
----- BEFORE ACTION
pub type Auth {
  Verified(Int)
  Unverified
}

const auth = True

const id = 1234

pub fn main() {
  let v = verify(auth, Verified(id))
                       ▔▔▔▔▔▔▔▔↑    

  v
}


----- AFTER ACTION
pub type Auth {
  Verified(Int)
  Unverified
}

const auth = True

const id = 1234

const auth_2 = Verified(id)

pub fn main() {
  let v = verify(auth, auth_2)

  v
}
