language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_return_of_float.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  0.25\n}"
---
----- BEFORE ACTION
pub fn main() {
  0.25
  ▔▔▔↑
}


----- AFTER ACTION
const float = 0.25

pub fn main() {
  float
}
