language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_return_of_int.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  100\n}"
---
----- BEFORE ACTION
pub fn main() {
  100
  ▔▔↑
}


----- AFTER ACTION
const int = 100

pub fn main() {
  int
}
