language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_return_of_list.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  [1, 2, 3, 4]\n}"
---
----- BEFORE ACTION
pub fn main() {
  [1, 2, 3, 4]
  ↑           
}


----- AFTER ACTION
const ints = [1, 2, 3, 4]

pub fn main() {
  ints
}
