language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_return_of_nested_outside.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  [#(0.25, 0.75), #(0.5, 1.5)]\n}"
---
----- BEFORE ACTION
pub fn main() {
  [#(0.25, 0.75), #(0.5, 1.5)]
   ▔↑                         
}


----- AFTER ACTION
const value = #(0.25, 0.75)

pub fn main() {
  [value, #(0.5, 1.5)]
}
