language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_taken_name_by_constant.snap
---
source: language-server/src/tests/action.rs
expression: "const ints = [1, 2]\n\npub fn main() {\n  [5, 50]\n}"
---
----- BEFORE ACTION
const ints = [1, 2]

pub fn main() {
  [5, 50]
  ↑      
}


----- AFTER ACTION
const ints = [1, 2]

const ints_2 = [5, 50]

pub fn main() {
  ints_2
}
