language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_taken_name_by_function.snap
---
source: language-server/src/tests/action.rs
expression: "fn floats() {\n    [1.0, 2.0]\n}\n\npub fn main() {\n  [0.25, 0.75]\n}"
---
----- BEFORE ACTION
fn floats() {
    [1.0, 2.0]
}

pub fn main() {
  [0.25, 0.75]
  ↑           
}


----- AFTER ACTION
fn floats() {
    [1.0, 2.0]
}

const floats_2 = [0.25, 0.75]

pub fn main() {
  floats_2
}
