language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_tuple_containing_constant.snap
---
source: language-server/src/tests/action.rs
expression: "const something = \"something\"\n\npub fn main() {\n  let c = #(0.333334, something)\n}"
---
----- BEFORE ACTION
const something = "something"

pub fn main() {
  let c = #(0.333334, something)
          ▔↑                    
}


----- AFTER ACTION
const something = "something"

const value = #(0.333334, something)

pub fn main() {
  let c = value
}
