language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_whole_declaration_of_bin_op.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/io\n\npub fn main() {\n  let twelve = \"1\" <> \"2\"\n  io.print(twelve)\n}"
---
----- BEFORE ACTION
import gleam/io

pub fn main() {
  let twelve = "1" <> "2"
  ▔▔▔▔▔▔▔▔▔↑             
  io.print(twelve)
}


----- AFTER ACTION
import gleam/io

const twelve = "1" <> "2"

pub fn main() {
  io.print(twelve)
}
